do small change in the index.html

--- a/compare50/_renderer/templates/index.html
+++ b/compare50/_renderer/templates/index.html
@@ -16,11 +16,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-8 table-responsive" id="index"></div>
-                <div class="col-4" id="cluster">
-                    <div id="cluster_graph"></div>
-                    <div id="slider"></div>
-                </div>
+                <div id="index"></div>
             </div>
         </div>
         <script>
